--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@
                 <label for="sixth">Is Netflix good for Kids?</label>
                 <div class="content">
                     <p>The Netflix Kids experience is included in your membership to give parents control while kids enjoy family-friendly TV shows and films in their own space.<br><br>
-                    Kids profiles come with PIN-protected parental controls that let you restrict the maturity rating of content kids can watch and block specific titles you don’t want kids to see.</p>
+                    Kids profiles come with PIN-protected parental controls that is let you restrict the maturity rating of content kids can watch and block specific titles you don’t want kids to see.</p>
                 </div>
             </li>
         </ul>
